@@ -7,7 +7,7 @@ KISSY.Template Changelog:
   * 调整部分接口，实现一个较为复杂的用例，P4P.
 
 2010-11-10  yyfrankyy   <yyfrankyy@gmail.com>
-  * 迁移到kissy目录,去掉micro-template的全部转为js
+  * 迁移到kissy目录,去掉micro-template的全部转为js.
   * 按照原来的接口，规划好部分单元测试用例.
 
 2010-12-15  yyfrankyy   <yyfrankyy@gmail.com>
@@ -20,5 +20,10 @@ KISSY.Template Changelog:
   * 调整变量作用域,增加容错.
 
 2010-12-21  yyfrankyy   <yyfrankyy@gmail.com>
-  * 标签起始关闭重构为单一方法
+  * 标签起始关闭重构为单一方法.
   * 增加文档.
+
+2011-03-31  yyfrankyy   <yyfrankyy@gmail.com>
+  * 自定义表达式支持多参数传递,定义为function的时候会将参数split为数组, 直接传递
+    给表达式定义方法.
+  * 利用上述特性,each现在支持{{#each obj as value index}}自定义变量名.
